--- a/styles.css
+++ b/styles.css
@@ -488,14 +488,38 @@ body {
 
 /* Responsive Styles */
 @media (max-width: 768px) {
+  body {
+    padding: 0;
+    background-color: var(--content-bg);
+  }
+
   .app-wrapper {
+    margin-top: 4rem;
     padding: 1rem;
     height: auto;
+  }
+
+  .search-box {
+    width: 100%;
+  }
+
+  .left-btn {
+    position: absolute;
+    top: 20px;
+    right: 70px;
+    padding: 0.4rem 0.8rem;
+    font-size: 0.8rem;
+    border: none;
+    border-radius: 6px;
   }
 
   .container {
     flex-direction: column;
     min-height: auto;
+  }
+
+  .product-card {
+    width: 158px;
   }
 
   .sidebar {
@@ -518,7 +542,7 @@ body {
 
   .content {
     padding: 0.75rem;
-    justify-content: center;
+    justify-content: flex-start; /*center*/
   }
 
   .product-card {
