--- a/styles.css
+++ b/styles.css
@@ -510,6 +510,75 @@ body {
   background-color: #777;
 }
 
+/* Styling for the button */
+#imagePopup {
+  display: none;
+}
+#openPopupBtn {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+/* Styling for the popup overlay */
+.popup-overlay {
+  display: none; /* Initially hide the popup */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex; /* Use flexbox for centering */
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Styling for the popup content */
+.popup-content {
+  position: relative;
+  background-color: var(--bg-color);
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 90%;
+  max-height: 90%;
+}
+
+/* Styling for the image */
+.popup-image {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 10px;
+}
+
+/* Styling for the close button */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff; /* Changed color to white for better contrast */
+  cursor: pointer;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  padding: 5px 10px; /* Add padding here to create a circle */
+  height: 25px;
+  width: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease;
+}
+
+.close-btn:hover {
+  transform: scale(1.02);
+  cursor: pointer;
+}
+
 /* Responsive Styles */
 @media (max-width: 768px) {
   body {
@@ -592,6 +661,10 @@ body {
     right: 10px;
     font-size: 1.3rem;
     padding: 0.4rem;
+  }
+
+  .popup-content {
+    padding: 10px;
   }
 
   .footer-wrapper {
